Prevent text wrapping inside `<kbd>`

--- a/public/index.css
+++ b/public/index.css
@@ -352,6 +352,7 @@ pre {
 	border: 1px solid var(--theme-shade-subtle);
 	box-shadow: 0 3px var(--theme-shade-subtle);
 	background-color: var(--theme-bg-offset);
+	white-space: nowrap;
 }
 
 .theme-dark .content kbd {
